--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 pytesseract==0.2.6
 matplotlib==3.1.0
-Scrapy==1.6.0
 numpy==1.16.4
 discord.py==1.1.1
 fuzzywuzzy==0.17.0
 Pillow==6.0.0
 discord==1.0.1
+requests==2.22.0
+beautifulsoup4==4.7.1
