--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-fuzzywuzzy==0.17.0
-numpy==1.16.4
-matplotlib==3.1.0
+opencv_python==4.1.0.25
 requests==2.22.0
-Flask==1.0.3
-discord.py==1.1.1
+matplotlib==3.1.0
 pytesseract==0.2.6
+numpy==1.16.4
+discord.py==1.1.1
+Flask==1.0.3
+fuzzywuzzy==0.17.0
 Pillow==6.0.0
 beautifulsoup4==4.7.1
 discord==1.0.1
