--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 opencv_python==4.1.0.25
 requests==2.22.0
 matplotlib==3.1.0
+PySimpleGUI==4.0.0
 pytesseract==0.2.6
 numpy==1.16.4
 discord.py==1.1.1
