--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,33 @@
-opencv-python==4.1.1.26
-requests==2.22.0
-matplotlib==3.1.0
-PySimpleGUI==4.0.0
-pytesseract==0.2.6
-numpy==1.16.4
-discord.py==1.1.1
+aiohttp==3.6.3
+async-timeout==3.0.1
+attrs==20.2.0
+beautifulsoup4==4.7.1
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+colour==0.1.5
+discord==1.0.1
+discord.py==1.5.1
 Flask==1.0.3
 fuzzywuzzy==0.17.0
-Pillow==6.0.0
-beautifulsoup4==4.7.1
-discord==1.0.1
+idna==2.10
+inexactsearch==1.0.2
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+multidict==4.7.6
+names==0.3.0
+numpy==1.19.3
+opencv-python==4.4.0.44
+Pillow==8.0.1
+PySimpleGUI==4.0.0
+pyspellchecker==0.5.5
+pytesseract==0.2.6
+requests==2.22.0
+silpa-common==0.3
+soundex==1.1.3
+soupsieve==2.0.1
+urllib3==1.25.11
+websockets==6.0
+Werkzeug==1.0.1
+yarl==1.6.2
