--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,21 @@
-aiohttp==3.6.3
-async-timeout==3.0.1
-attrs==20.2.0
-beautifulsoup4==4.7.1
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-colour==0.1.5
-discord.py==1.1.1
-discord.py==1.5.1
-Flask==1.0.3
-fuzzywuzzy==0.17.0
-idna==2.10
-inexactsearch==1.0.2
-itsdangerous==1.1.0
-Jinja2==2.11.2
-matplotlib==3.1.0
-MarkupSafe==1.1.1
-multidict==4.7.6
-names==0.3.0
-numpy==1.19.3
-opencv-python==4.4.0.44
-Pillow==8.0.1
-PySimpleGUI==4.0.0
-pyspellchecker==0.5.5
-pytesseract==0.2.6
-requests==2.22.0
-silpa-common==0.3
-soundex==1.1.3
-soupsieve==2.0.1
-urllib3==1.25.11
-websockets==6.0
-Werkzeug==1.0.1
-yarl==1.6.2
+colour
+names
+opencv-python
+pygal
+pygaljs
+pyspellchecker
+pytesseract
+pytest-benchmark
+symspellpy
+tesserocr
+# attrs==20.3.0 # Installed as dependency for pytest
+# iniconfig==1.1.1 # Installed as dependency for pytest
+# numpy==1.19.4 # Installed as dependency for symspellpy, opencv-python
+# packaging==20.8 # Installed as dependency for pytest
+# pillow==8.0.1 # Installed as dependency for pytesseract
+# pluggy==0.13.1 # Installed as dependency for pytest
+# py==1.10.0 # Installed as dependency for pytest
+# py-cpuinfo==7.0.0 # Installed as dependency for pytest-benchmark
+# pyparsing==2.4.7 # Installed as dependency for packaging
+# pytest==6.2.1 # Installed as dependency for pytest-benchmark
+# toml==0.10.2 # Installed as dependency for maturin, pytest
