--- a/tesserocr_pool/Cargo.toml
+++ b/tesserocr_pool/Cargo.toml
@@ -15,6 +15,7 @@ num_cpus = "1.13.0"
 bincode = "1.3.1"
 spmc = "0.3.0"
 tesserocr_pool =  { path = "tesserocr_pool_rust", package = "tesserocr_pool_rs" }
+twox-hash = "1.6"
 
 [dev-dependencies]
 minifb = "0.19.1"
