--- a/tesserocr_pool/tesserocr_pool_rust/Cargo.toml
+++ b/tesserocr_pool/tesserocr_pool_rust/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 rayon = "1.5.0"
-leptess = "0.9.0"
+leptess = { git = "https://github.com/etaloof/leptess" }
 numpy = "0.12.1"
 pyo3 = { version = "0.12.3" }
 image = { version = "0.23.12", features = [ "bmp" ], default_features = false }
