--- a/tesserocr_pool/Cargo.toml
+++ b/tesserocr_pool/Cargo.toml
@@ -16,6 +16,8 @@ bincode = "1.3.1"
 spmc = "0.3.0"
 tesserocr_pool =  { path = "tesserocr_pool_rust", package = "tesserocr_pool_rs" }
 twox-hash = "1.6"
+parallel-stream = "2.1"
+async-std = "1.5"
 
 [dev-dependencies]
 minifb = "0.19.1"
